--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
+.container {
+  max-width: 1040px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: lightgray;
+}
+
+.title {
   text-align: center;
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.products-grid {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 15px;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.product-card {
+  background-color: white;
+  padding: 15px;
+  border-radius: 8px;
+  width: 180px;
+}
+
+.add-to-cart {
+  background-color: skyblue;
   color: white;
+  border: none;
+  padding: 8px 10px;
+  width: 100%;
+  cursor: pointer;
+  border-radius: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+.cart-summary {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: white;
+  border-radius: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cart-summary p {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.gift-message {
+  color: green;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.progress {
+  height: 100%;
+  background-color: blue;
+  border-radius: 5px;
+}
+.progress-bar {
+  height: 10px;
+
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.cart-items {
+  margin-top: 20px;
+}
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+}
+.cart-item p {
+  font-size: 16px;
+  margin: 0;
+}
+
+.cart-actions {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.decrement,
+.increment {
+  background: red;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 5px 8px;
+}
+
+.increment {
+  background: green;
+}
+
+.increment:hover {
+  background: green;
+}
+
+.decrement:hover {
+  background: red;
+}
+.free-gift {
+  color: green;
+  background-color: greenyellow;
+}
+.amount {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: bold;
 }
